# MARS-AreaCoverage

./: LICENSE  README.md
Grid-sim_MARS-area-sweeping/: README.md  TODO.md  config_.yaml  experiment_generator.py  multi_comrange_sim_par.py  run_agent.py  run_environment.py  run_simulation_refactor_par.py
Grid-sim_MARS-area-sweeping/agent_lib/: gs_reactive_agent.py  gsr_recall_agent.py  wagner_ant.py  wagner_ant_filter.py  wagner_ant_recall_filter.py  wagner_henrish_ant_recall_filter.py
Grid-sim_MARS-area-sweeping/archive/: agent.py  agent_v2.py  critical_check.py  main.py  run_agent-single_agent.py  run_simulation.py  run_simulation_refactor.py  test.py
Grid-sim_MARS-area-sweeping/core/: agent_base.py  critical_check.py  process_manager.py  sim_env.py
Grid-sim_MARS-area-sweeping/docs/: architecture.md  configuration.md  experiment_logging.md  setup.md  usage.md
Grid-sim_MARS-area-sweeping/final_plot/: combine.py  plot_1.py  plot_2.py
Grid-sim_MARS-area-sweeping/plotting/: ant_experiment_plot.py  experiment_plot.py  experimewnt1_plotting.py  gsr_experiment_plot.py  plot2.py  plot3.py
ROS2_M5_MARS_Optitrack/micro_ros_roverC/: micro_ros_roverC.ino
ROS2_M5_MARS_Optitrack/micro_ros_roverC_esp32/: micro_ros_roverC_esp32.ino
ROS2_M5_MARS_Optitrack/robot_controller/: README.md  setup.py  (+1 more)
ROS2_M5_MARS_Optitrack/robot_controller/install/robot_controller/share/robot_controller/: package.bash  package.sh  package.xml  package.zsh
ROS2_M5_MARS_Optitrack/robot_controller/install/robot_controller/share/robot_controller/launch/: mars_launch.py  single_robot_launch.py
(+12876 files in other folders)
